<package format="3">
  <name>robotic_arm_planner_interfaces</name>
  <version>0.0.0</version>
  <description>Interfaces (srv) for robotic_arm_planner</description>
  <maintainer email="yeray.navarro@estudiantat.upc.edu">Yeray Navarro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

